20230407 Office Review Python

--- a/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/06 . 파일과 디렉터리 다루기.ipynb
+++ b/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/06 . 파일과 디렉터리 다루기.ipynb
@@ -819,6 +819,475 @@
     "for filename in glob.glob(\"**/*.txt\", recursive=True):\n",
     "    print(filename)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 041 특정 파일만 찾으려면? ― fnmatch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 041 특정 파일만 찾으려면? ― fnmatch\n",
+    "# ----------------------------------\n",
+    "# fnmatch는 파일 중에서 특정 패턴(유닉스 셸이 사용하는 규칙)과 일치하는 파일을 찾을 때 사용하는 모듈이다.\n",
+    "\n",
+    "# 문제\n",
+    "# ----\n",
+    "# 현재 디렉터리의 모든 파일 중에서 다음과 같은 규칙을 따르는 파일을 모두 찾아 출력하고자 한다. 어떻게 프로그램을 만들어야 할까?\n",
+    "\n",
+    "# - 파일명은 a로 시작한다.\n",
+    "# - 확장자는 파이썬 파일을 의미하는 .py 이다.\n",
+    "# - 확장자를 제외한 파일명의 길이는 5이다.\n",
+    "# - 파일명의 마지막 5번째 문자는 숫자이다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "# ----\n",
+    "# 다음은 fnmatch를 사용한 문제 풀이이다.\n",
+    "\n",
+    "# [파일명: fnmatch_sample.py]\n",
+    "\n",
+    "# import fnmatch\n",
+    "# import os\n",
+    "\n",
+    "# for filename in os.listdir('.'):\n",
+    "#     if fnmatch.fnmatch(filename, 'a???[0-9].py'):\n",
+    "#         print(filename)\n",
+    "\n",
+    "# fnmatch.fnmatch(filename, pattern)은 filename 문자열이 pattern 문자열과 일치하는지를 검사하여 True나 False를 반환한다.\n",
+    "\n",
+    "# fnmatch에 사용할 수 있는 패턴에는 다음과 같은 것이 있다.\n",
+    "\n",
+    "# 패턴\t의미\n",
+    "# *\t모든 것과 일치\n",
+    "# ?\t모든 단일 문자와 일치\n",
+    "# [seq]\tseq의 모든 문자와 일치\n",
+    "# [!seq]\tseq에 없는 모든 문자와 일치\n",
+    "# 따라서 fnmatch에 사용한 a???[0-9].py 패턴은 문제의 요구 조건과 정확히 일치한다.\n",
+    "\n",
+    "# 참고\n",
+    "# fnmatch - 유닉스 파일명 패턴 일치: https://docs.python.org/ko/3/library/fnmatch.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aest4.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import fnmatch\n",
+    "import os\n",
+    "\n",
+    "for filename in os.listdir('.'):\n",
+    "    if fnmatch.fnmatch(filename, 'a???[1-9].txt'):\n",
+    "        print(filename)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 042 파일에서 무작위로 한 줄만 가져오려면? ― linecache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 042 파일에서 무작위로 한 줄만 가져오려면? ― linecache\n",
+    "# --------------------------------------------------\n",
+    "# linecache는 파일에서 원하는 줄의 값을 읽을 때 사용하는 모듈이다. \n",
+    "# 이때 캐시를 사용하여 파일에서 여러 줄을 읽는 일반적인 상황을 내부적으로 최적화한다.\n",
+    "\n",
+    "# 문제\n",
+    "# 다음은 속담 퀴즈 프로그램에 사용할 속담 100개를 저장한 saying.txt 파일이다.\n",
+    "\n",
+    "# 파일 내려받기: https://github.com/pahkey/pylib/blob/main/ch06/saying.txt\n",
+    "\n",
+    "# [파일명: saying.txt]\n",
+    "\n",
+    "# 가는 날이 장날이다\n",
+    "# 가는 말이 고와야 오는 말이 곱다\n",
+    "# 가랑비에 옷 젖는 줄 모른다\n",
+    "# 가랑잎이 솔잎더러 바스락거린다고 한다\n",
+    "# 가재는 게 편이라\n",
+    "# 가지 많은 나무에 바람 잘 날 없다\n",
+    "# 간에 가 붙고 쓸개에 가 붙는다\n",
+    "# 간에 기별도 안 간다\n",
+    "# 간이 콩알만해지다\n",
+    "# 갈수록 태산\n",
+    "# 값싼 것이 비지떡\n",
+    "# 같은 값이면 다홍치마\n",
+    "# 개구리 올챙이 적 생각을 못한다\n",
+    "# 개밥에 도토리\n",
+    "# 개천에서 용 난다\n",
+    "# 고기는 씹어야 맛이요, 말은 해야 맛이라\n",
+    "# 고래 싸움에 새우 등 터진다\n",
+    "# 고양이 목에 방울 달기\n",
+    "# 공든 탑이 무너지랴\n",
+    "# 구더기 무서워 장 못 담글까\n",
+    "# 구슬이 서 말이라도 꿰어야 보배라\n",
+    "# 귀에 걸면 귀걸이, 코에 걸면 코걸이\n",
+    "# 그림의 떡\n",
+    "# 금강산도 식후경\n",
+    "# 뛰는 놈 위에 나는 놈 있다\n",
+    "# 까마귀 날자 배 떨어진다\n",
+    "# 꿩 대신 닭\n",
+    "# 꿩 먹고 알 먹기\n",
+    "# 남의 잔치에 감 놓아라 배 놓아라 한다\n",
+    "# 낫 놓고 기역자도 모른다\n",
+    "# 낮말은 새가 듣고 밤말은 쥐가 듣는다\n",
+    "# 내 코가 석 자\n",
+    "# 누워서 침 뱉기\n",
+    "# 늦게 배운 도둑이 날 새는 줄 모른다\n",
+    "# 다 된 죽에 코 풀기\n",
+    "# 달면 삼키고 쓰면 뱉는다\n",
+    "# 닭 잡아 먹고 오리발 내민다\n",
+    "# 도둑이 제 발 저리다\n",
+    "# 돌다리도 두들겨 보고 건너라\n",
+    "# 되로 주고 말로 받는다\n",
+    "# 등잔 밑이 어둡다\n",
+    "# 땅 짚고 헤엄치기\n",
+    "# 똥 묻은 개가 겨 묻은 개 나무란다\n",
+    "# 마른 하늘에 날벼락\n",
+    "# 말 한마디에 천 냥 빚도 갚는다\n",
+    "# 목구멍이 포도청\n",
+    "# 못된 송아지 엉덩이에 뿔 난다\n",
+    "# 믿는 도끼에 발등 찍힌다\n",
+    "# 밑 빠진 독에 물 붓기\n",
+    "# 바늘 도둑이 소 도둑 된다\n",
+    "# 배보다 배꼽이 더 크다\n",
+    "# 백지장도 맞들면 낫다\n",
+    "# 벼룩의 간 빼먹기\n",
+    "# 병 주고 약 준다\n",
+    "# 보기 좋은 떡이 먹기도 좋다\n",
+    "# 빛 좋은 개살구\n",
+    "# 사공이 많으면 배가 산으로 올라간다\n",
+    "# 새발의 피\n",
+    "# 서당 개 삼 년에 풍월을 읊는다\n",
+    "# 세 살 버릇 여든까지 간다\n",
+    "# 소문난 잔치에 먹을 것 없다\n",
+    "# 소 잃고 외양간 고친다\n",
+    "# 쇠뿔도 단김에 빼랬다\n",
+    "# 수박 겉 핥기\n",
+    "# 식은 죽 먹기\n",
+    "# 십 년이면 강산도 변한다\n",
+    "# 아는 길도 물어 가라\n",
+    "# 아니 땐 굴뚝에 연기 나랴\n",
+    "# 아닌 밤중에 홍두깨\n",
+    "# 약방에 감초\n",
+    "# 어물전 망신은 꼴뚜기가 시킨다\n",
+    "# 열 길 물 속은 알아도 한 길 사람 속은 모른다\n",
+    "# 열 번 찍어 아니 넘어가는 나무 없다\n",
+    "# 오뉴월 감기는 개도 아니 앓는다\n",
+    "# 오르지 못할 나무는 쳐다보지도 말아라\n",
+    "# 옥의 티\n",
+    "# 우물에 가서 숭늉 찾는다\n",
+    "# 울며 겨자 먹기\n",
+    "# 원수는 외나무 다리에서 만난다\n",
+    "# 원숭이도 나무에서 떨어진다\n",
+    "# 윗물이 맑아야 아랫물도 맑다\n",
+    "# 자라 보고 놀란 가슴 솥뚜껑 보고 놀란다\n",
+    "# 자랄 나무는 떡잎부터 알아본다\n",
+    "# 작은 고추가 더 맵다\n",
+    "# 종로에서 뺨 맞고 한강 가서 눈 흘긴다\n",
+    "# 좋은 약은 입에 쓰다\n",
+    "# 쥐구멍에도 볕 들 날이 있다\n",
+    "# 지렁이도 밟으면 꿈틀한다\n",
+    "# 천 리 길도 한 걸음부터\n",
+    "# 칼로 물 베기\n",
+    "# 콩 심은 데 콩 나고 팥 심은 데 팥 난다\n",
+    "# 티끌 모아 태산\n",
+    "# 핑계 없는 무덤 없다\n",
+    "# 하늘의 별 따기\n",
+    "# 하늘이 무너져도 솟아날 구멍이 있다\n",
+    "# 하룻강아지 범 무서운 줄 모른다\n",
+    "# 한 귀로 듣고 한 귀로 흘린다\n",
+    "# 한 술 밥에 배 부르랴\n",
+    "# 함흥차사라\n",
+    "# 호랑이도 제 말 하면 온다\n",
+    "# 이 파일의 100개 속담 중 한 개를 무작위로 선택해서 출력하는 프로그램은 어떻게 작성해야 할까?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가는 말이 고와야 오는 말이 곱다\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "saying_text = \"\"\"\n",
+    "가는 날이 장날이다\n",
+    "가는 말이 고와야 오는 말이 곱다\n",
+    "가랑비에 옷 젖는 줄 모른다\n",
+    "가랑잎이 솔잎더러 바스락거린다고 한다\n",
+    "가재는 게 편이라\n",
+    "가지 많은 나무에 바람 잘 날 없다\n",
+    "간에 가 붙고 쓸개에 가 붙는다\n",
+    "간에 기별도 안 간다\n",
+    "간이 콩알만해지다\n",
+    "갈수록 태산\n",
+    "값싼 것이 비지떡\n",
+    "같은 값이면 다홍치마\n",
+    "개구리 올챙이 적 생각을 못한다\n",
+    "개밥에 도토리\n",
+    "개천에서 용 난다\n",
+    "고기는 씹어야 맛이요, 말은 해야 맛이라\n",
+    "고래 싸움에 새우 등 터진다\n",
+    "고양이 목에 방울 달기\n",
+    "공든 탑이 무너지랴\n",
+    "구더기 무서워 장 못 담글까\n",
+    "구슬이 서 말이라도 꿰어야 보배라\n",
+    "귀에 걸면 귀걸이, 코에 걸면 코걸이\n",
+    "그림의 떡\n",
+    "금강산도 식후경\n",
+    "뛰는 놈 위에 나는 놈 있다\n",
+    "까마귀 날자 배 떨어진다\n",
+    "꿩 대신 닭\n",
+    "꿩 먹고 알 먹기\n",
+    "남의 잔치에 감 놓아라 배 놓아라 한다\n",
+    "낫 놓고 기역자도 모른다\n",
+    "낮말은 새가 듣고 밤말은 쥐가 듣는다\n",
+    "내 코가 석 자\n",
+    "누워서 침 뱉기\n",
+    "늦게 배운 도둑이 날 새는 줄 모른다\n",
+    "다 된 죽에 코 풀기\n",
+    "달면 삼키고 쓰면 뱉는다\n",
+    "닭 잡아 먹고 오리발 내민다\n",
+    "도둑이 제 발 저리다\n",
+    "돌다리도 두들겨 보고 건너라\n",
+    "되로 주고 말로 받는다\n",
+    "등잔 밑이 어둡다\n",
+    "땅 짚고 헤엄치기\n",
+    "똥 묻은 개가 겨 묻은 개 나무란다\n",
+    "마른 하늘에 날벼락\n",
+    "말 한마디에 천 냥 빚도 갚는다\n",
+    "목구멍이 포도청\n",
+    "못된 송아지 엉덩이에 뿔 난다\n",
+    "믿는 도끼에 발등 찍힌다\n",
+    "밑 빠진 독에 물 붓기\n",
+    "바늘 도둑이 소 도둑 된다\n",
+    "배보다 배꼽이 더 크다\n",
+    "백지장도 맞들면 낫다\n",
+    "벼룩의 간 빼먹기\n",
+    "병 주고 약 준다\n",
+    "보기 좋은 떡이 먹기도 좋다\n",
+    "빛 좋은 개살구\n",
+    "사공이 많으면 배가 산으로 올라간다\n",
+    "새발의 피\n",
+    "서당 개 삼 년에 풍월을 읊는다\n",
+    "세 살 버릇 여든까지 간다\n",
+    "소문난 잔치에 먹을 것 없다\n",
+    "소 잃고 외양간 고친다\n",
+    "쇠뿔도 단김에 빼랬다\n",
+    "수박 겉 핥기\n",
+    "식은 죽 먹기\n",
+    "십 년이면 강산도 변한다\n",
+    "아는 길도 물어 가라\n",
+    "아니 땐 굴뚝에 연기 나랴\n",
+    "아닌 밤중에 홍두깨\n",
+    "약방에 감초\n",
+    "어물전 망신은 꼴뚜기가 시킨다\n",
+    "열 길 물 속은 알아도 한 길 사람 속은 모른다\n",
+    "열 번 찍어 아니 넘어가는 나무 없다\n",
+    "오뉴월 감기는 개도 아니 앓는다\n",
+    "오르지 못할 나무는 쳐다보지도 말아라\n",
+    "옥의 티\n",
+    "우물에 가서 숭늉 찾는다\n",
+    "울며 겨자 먹기\n",
+    "원수는 외나무 다리에서 만난다\n",
+    "원숭이도 나무에서 떨어진다\n",
+    "윗물이 맑아야 아랫물도 맑다\n",
+    "자라 보고 놀란 가슴 솥뚜껑 보고 놀란다\n",
+    "자랄 나무는 떡잎부터 알아본다\n",
+    "작은 고추가 더 맵다\n",
+    "종로에서 뺨 맞고 한강 가서 눈 흘긴다\n",
+    "좋은 약은 입에 쓰다\n",
+    "쥐구멍에도 볕 들 날이 있다\n",
+    "지렁이도 밟으면 꿈틀한다\n",
+    "천 리 길도 한 걸음부터\n",
+    "칼로 물 베기\n",
+    "콩 심은 데 콩 나고 팥 심은 데 팥 난다\n",
+    "티끌 모아 태산\n",
+    "핑계 없는 무덤 없다\n",
+    "하늘의 별 따기\n",
+    "하늘이 무너져도 솟아날 구멍이 있다\n",
+    "하룻강아지 범 무서운 줄 모른다\n",
+    "한 귀로 듣고 한 귀로 흘린다\n",
+    "한 술 밥에 배 부르랴\n",
+    "함흥차사라\n",
+    "호랑이도 제 말 하면 온다\n",
+    "\"\"\"\n",
+    "\n",
+    "import random \n",
+    "\n",
+    "with open('./saying.txt', 'wt') as f:\n",
+    "    for saying in saying_text.split('\\n'):\n",
+    "        if saying:\n",
+    "            f.write(f'{saying}\\n')\n",
+    "\n",
+    "\n",
+    "with open('./saying.txt', 'rt') as f:\n",
+    "    lines = f.readlines()\n",
+    "    \n",
+    "search_line = random.randint(0,99)\n",
+    "print(lines[search_line])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "# 다음은 linecache를 사용한 문제 풀이이다.\n",
+    "\n",
+    "# [파일명: linecache_sample.py]\n",
+    "\n",
+    "# import linecache\n",
+    "# import random\n",
+    "\n",
+    "# no = random.randint(1, 100)\n",
+    "# print(linecache.getline('saying.txt', no))\n",
+    "\n",
+    "# linecache.getline(filename, lineno)는 지정한 줄을 파일에서 읽어 반환한다. \n",
+    "# 이때 메모리 캐시를 사용하므로 linecache.getline()을 여러 번 호출하더라도 캐시에 저장한 값을 반환하므로 속도가 빠르다.\n",
+    "\n",
+    "# 참고\n",
+    "# linecache - 텍스트 줄에 대한 무작위 액세스: https://docs.python.org/ko/3/library/linecache.html\n",
+    "# random 더 알아보기: https://wikidocs.net/33#random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "콩 심은 데 콩 나고 팥 심은 데 팥 난다\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import linecache\n",
+    "import random\n",
+    "\n",
+    "no = random.randint(1, 100)\n",
+    "print(linecache.getline('saying.txt', no))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 043 파일을 복사하거나 이동하려면? ― shutil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 043 파일을 복사하거나 이동하려면? ― shutil\n",
+    "# ----------------------------------------\n",
+    "# shutil은 파일을 복사(copy)하거나 이동(move)할 때 사용하는 모듈이다.\n",
+    "\n",
+    "# 문제\n",
+    "# ----\n",
+    "# 작업 중인 파일을 자동으로 백업하는 기능을 구현하고자 c:\\doit\\a.txt 파일을 c:\\temp\\a.txt.bak이라는 \n",
+    "# 이름으로 복사하는 프로그램을 만들고자 한다. 어떻게 만들어야 할까? \n",
+    "# c:\\doit 디렉터리에 a.txt 파일을 만드는 중이며 백업용 c:\\temp 디렉터리는 이미 만들었다고 가정한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "# ----\n",
+    "# 다음은 shutil을 사용한 문제 풀이이다.\n",
+    "\n",
+    "# [파일명: shutil_sample.py]\n",
+    "\n",
+    "# import shutil\n",
+    "\n",
+    "# shutil.copy(\"c:/doit/a.txt\", \"c:/temp/a.txt.bak\")\n",
+    "# 알아두면 좋아요\n",
+    "\n",
+    "# shutil.move\n",
+    "# 휴지통으로 삭제하는 기능을 구현하고자 c:\\doit\\a.txt 파일을 c:\\temp\\a.txt로 이동하려면 다음과 같이 코드를 작성한다.\n",
+    "\n",
+    "# import shutil\n",
+    "\n",
+    "# shutil.move(\"c:/doit/a.txt\", \"c:/temp/a.txt\")\n",
+    "\n",
+    "# 참고\n",
+    "# shutil - 고수준 파일 연산: https://docs.python.org/ko/3/library/shutil.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./test3.txt'"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import shutil\n",
+    "\n",
+    "# shutil.copy('./test3.txt','c:/temp/test.txt.bak')\n",
+    "shutil.move('c:/temp/test.txt','./test3.txt')"
+   ]
   }
  ],
  "metadata": {
