--- a/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/13. 네트워크와 프로세스 간 통신 다루기.ipynb
+++ b/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/13. 네트워크와 프로세스 간 통신 다루기.ipynb
@@ -37,10 +37,8 @@
     "\n",
     "# import time\n",
     "\n",
-    "\n",
     "# def sleep():\n",
     "#     time.sleep(1)\n",
-    "\n",
     "\n",
     "# def sum(name, numbers):\n",
     "#     start = time.time()\n",
@@ -86,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -95,12 +93,12 @@
      "text": [
       "작업중=A, number=1, total=1\n",
       "작업중=A, number=2, total=3\n",
-      "작업명=A, 걸린시간=2.0010077953338623\n",
+      "작업명=A, 걸린시간=2.015300989151001\n",
       "작업중=B, number=1, total=1\n",
       "작업중=B, number=2, total=3\n",
       "작업중=B, number=3, total=6\n",
-      "작업명=B, 걸린시간=3.00077486038208\n",
-      "총합=9, 총시간=5.001782655715942\n"
+      "작업명=B, 걸린시간=3.026836633682251\n",
+      "총합=9, 총시간=5.042137622833252\n"
      ]
     }
    ],
@@ -216,17 +214,275 @@
     "# 작업중=B, number=3, total=6\n",
     "# 작업명=B, 걸린시간=3.000927209854126\n",
     "# 총합=9, 총시간=3.000927209854126\n",
-    "# A 작업과 B 작업을 교대로 호출한다. (제어권이 await에 의해 계속 바뀐다는 것을 알 수 있다.) 그리고 시간도 5초 걸리던 것이 3초만 걸리게 되므로 A, B 작업이 완전히 비동기적으로 동작했다는 것을 알 수 있다.\n",
+    "\n",
+    "# A 작업과 B 작업을 교대로 호출한다. (제어권이 await에 의해 계속 바뀐다는 것을 알 수 있다.) \n",
+    "# 그리고 시간도 5초 걸리던 것이 3초만 걸리게 되므로 A, B 작업이 완전히 비동기적으로 동작했다는 것을 알 수 있다.\n",
     "\n",
     "# 참고\n",
     "# asyncio - 비동기 I/O: https://docs.python.org/ko/3/library/asyncio.html\n",
     "# 코루틴과 태스크: https://docs.python.org/ko/3/library/asyncio-task.html"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 072 서버와 통신하는 게임을 만들려면? ― socket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 072 서버와 통신하는 게임을 만들려면? ― socket\n",
+    "# socket은 TCP 서버/클라이언트 프로그램을 작성할 때 사용하는 모듈이다.\n",
+    "\n",
+    "# 문제\n",
+    "# 서버에서 1~9 사이의 숫자를 무작위로 생성하고 클라이언트가 접속하여 그 숫자를 맞추는 게임을 \n",
+    "# socket 모듈을 사용하여 프로그래밍하고자 한다. 어떻게 해야 할까?\n",
+    "\n",
+    "# 숫자 맞추기 게임의 규칙은 다음과 같다.\n",
+    "\n",
+    "# 1. 서버에서 1~9 사이의 숫자(정답)를 무작위로 생성하고 클라이언트의 접속을 기다린다.\n",
+    "# 2. 클라이언트는 서버에 접속하여 1~9 사이의 값을 입력하여 게임을 시작한다.\n",
+    "# 3. 서버는 클라이언트가 입력한 숫자가 정답보다 높을 때는 \"너무 높아요\"라고, 낮을 때는 \"너무 낮아요\"라고 응답한다.\n",
+    "# 4. 클라이언트가 0을 입력하면 \"종료\"라고 응답하고 서버를 종료한다.\n",
+    "# 5. 클라이언트가 정답을 입력하면 \"정답\"이라고 응답하고 서버를 종료한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "# 소켓 서버\n",
+    "# 숫자 게임 서버는 다음과 같이 만든다.\n",
+    "\n",
+    "# [파일명: socket_server.py]\n",
+    "\n",
+    "# import socket\n",
+    "# import random\n",
+    "\n",
+    "# HOST = ''\n",
+    "# PORT = 50007\n",
+    "\n",
+    "# with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:\n",
+    "#     s.bind((HOST, PORT))\n",
+    "#     s.listen()\n",
+    "#     print('서버가 시작되었습니다.')\n",
+    "#     conn, addr = s.accept()\n",
+    "#     with conn:\n",
+    "#         answer = random.randint(1, 9)\n",
+    "#         print(f'클라이언트가 접속했습니다:{addr}, 정답은 {answer} 입니다.')\n",
+    "#         while True:\n",
+    "#             data = conn.recv(1024).decode('utf-8')\n",
+    "#             print(f'데이터:{data}')\n",
+    "\n",
+    "#             try:\n",
+    "#                 n = int(data)\n",
+    "#             except ValueError:\n",
+    "#                 conn.sendall(f'입력값이 올바르지 않습니다:{data}'.encode('utf-8'))\n",
+    "#                 continue\n",
+    "\n",
+    "#             if n == 0:\n",
+    "#                 conn.sendall(f\"종료\".encode('utf-8'))\n",
+    "#                 break\n",
+    "#             if n > answer:\n",
+    "#                 conn.sendall(\"너무 높아요\".encode('utf-8'))\n",
+    "#             elif n < answer:\n",
+    "#                 conn.sendall(\"너무 낮아요\".encode('utf-8'))\n",
+    "#             else:\n",
+    "#                 conn.sendall(\"정답\".encode('utf-8'))\n",
+    "#                 break\n",
+    "\n",
+    "# 먼저 socket.socket(socket.AF_INET, socket.SOCK_STREAM)으로 소켓 객체 s를 생성한다. \n",
+    "# 첫 번째 매개변수 socket.AF_INET은 IPv4 인터넷 프로토콜을, 두 번째 매개변수 socket.SOCK_STREAM은 소켓 유형이 문자열 등을 주고받는 스트림 방식임을 의미한다.\n",
+    "\n",
+    "# s.bind((HOST, PORT))는 소켓 서버가 HOST라는 IP 주소의 PORT 번호에 해당하는 포트로 연결되도록 설정한다는 뜻이다. \n",
+    "# HOST에는 빈 문자열을 지정했으므로 외부 접속을 허용한다. 만약 HOST에 빈 문자열 대신 'localhost'로 설정한다면 로컬 접속만 허용한다.\n",
+    "\n",
+    "# s.listen() 은 서버 소켓이 클라이언트와의 연결을 시작할 수 있도록 바인딩된 포트를 연다. conn, addr = s.accept()는 클라이언트가 접속하면 연결을 수락하고 conn, addr을 반환한다. 이때 conn은 서버와 클라이언트가 연결된 소켓을 의미하고 addr은 클라이언트의 접속 IP를 의미한다.\n",
+    "\n",
+    "# 클라이언트가 전송한 값을 수신하려면 conn.recv() 함수를 사용하고 클라이언트에 값을 송신하려면 conn.sendall() 함수를 사용한다. 이때 주고받는 메시지는 바이트 문자열이어야 하므로 보낼 때는 UTF-8로 인코딩하고 받을 때에도 UTF-8로 디코딩해야 한다.\n",
+    "\n",
+    "# 참고: 부록 - 01 파이썬과 유니코드\n",
+    "\n",
+    "# conn.recv(1024)에서 1024는 한 번에 수신받을 데이터의 최대 바이트 수를 의미하며 보통 1킬로바이트를 의미하는 1,024바이트를 사용한다. 만약 클라이언트로부터 1,024바이트 이상의 데이터를 수신해야 한다면 더 큰 숫자를 사용하거나 루프를 사용하여 conn.recv() 함수를 여러 번 수행해야 한다.\n",
+    "\n",
+    "# 이후 클라이언트가 정답 또는 0을 입력할 때까지 클라이언트와 데이터를 주고받는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing socket_server.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile socket_server.py\n",
+    "# socket_server.py\n",
+    "\n",
+    "import socket\n",
+    "import random\n",
+    "\n",
+    "HOST = ''\n",
+    "PORT = 50007\n",
+    "\n",
+    "with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:\n",
+    "    s.bind((HOST, PORT))\n",
+    "    s.listen()\n",
+    "    print('서버가 시작되었습니다.')\n",
+    "    conn, addr = s.accept()\n",
+    "    with conn:\n",
+    "        answer = random.randint(1, 9)\n",
+    "        print(f'클라이언트가 접속했습니다:{addr}, 정답은 {answer} 입니다.')\n",
+    "        while True:\n",
+    "            data = conn.recv(1024).decode('utf-8')\n",
+    "            print(f'데이터:{data}')\n",
+    "\n",
+    "            try:\n",
+    "                n = int(data)\n",
+    "            except ValueError:\n",
+    "                conn.sendall(f'입력값이 올바르지 않습니다:{data}'.encode('utf-8'))\n",
+    "                continue\n",
+    "\n",
+    "            if n == 0:\n",
+    "                conn.sendall(f\"종료\".encode('utf-8'))\n",
+    "                break\n",
+    "            if n > answer:\n",
+    "                conn.sendall(\"너무 높아요\".encode('utf-8'))\n",
+    "            elif n < answer:\n",
+    "                conn.sendall(\"너무 낮아요\".encode('utf-8'))\n",
+    "            else:\n",
+    "                conn.sendall(\"정답\".encode('utf-8'))\n",
+    "                break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 소켓 클라이언트\n",
+    "# 숫자 게임 클라이언트는 다음과 같이 만든다.\n",
+    "\n",
+    "# [파일명: socket_client.py]\n",
+    "\n",
+    "# import socket\n",
+    "\n",
+    "# HOST = 'localhost'\n",
+    "# PORT = 50007\n",
+    "\n",
+    "# with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:\n",
+    "#     s.connect((HOST, PORT))\n",
+    "\n",
+    "#     while True:\n",
+    "#         n = input(\"1-9 사이의 숫자를 입력하세요(0은 게임포기):\")\n",
+    "#         if not n.strip():\n",
+    "#             print(\"입력값이 잘못되었습니다.\")\n",
+    "#             continue\n",
+    "#         s.sendall(n.encode('utf-8'))\n",
+    "#         data = s.recv(1024).decode('utf-8')\n",
+    "#         print(f'서버응답:{data}')\n",
+    "#         if data == \"정답\" or data == \"종료\":\n",
+    "#             break\n",
+    "# 소켓 클라이언트는 소켓 서버보다 간단하다. 가장 큰 차이점은 서버 소켓에서는 연결된 클라이언트를 의미하는 conn 객체를 통해 데이터를 주고받았다면 소켓 클라이언트에서는 서버와 연결을 의미하는 소켓 객체인 s 객체를 통해 데이터를 주고받는다는 점이다.\n",
+    "\n",
+    "# 소켓 클라이언트는 서버가 아니므로 HOST = 'localhost'와 같이 접속할 HOST를 정확하게 입력해야 한다. 그리고 서버에 접속하려면 s.connect ((HOST, PORT))와 같이 connect() 함수를 통해 접속해야 한다.\n",
+    "\n",
+    "# s.connect((HOST, PORT)) 함수에 전달하는 인수가 HOST, PORT가 아닌 (HOST, PORT)와 같은 튜플임에 주의하자.\n",
+    "\n",
+    "# 그리고 서버 소켓과 데이터를 주고받고자 소켓 객체의 s.recv(), s.sendall() 함수를 사용한다. 사용 방법은 서버 소켓과 마찬가지이다.\n",
+    "\n",
+    "# 동작확인\n",
+    "# 소켓 서버를 실행하고 나서 소켓 클라이언트를 실행하여 게임을 진행하고 동작을 확인해 보자.\n",
+    "\n",
+    "# 서버소켓 실행 예\n",
+    "\n",
+    "# c:\\projects\\pylib>python socket_server.py\n",
+    "# 서버가 시작되었습니다.\n",
+    "# 클라이언트가 접속했습니다:('127.0.0.1', 14761), 정답은 4 입니다.\n",
+    "# 데이터:1\n",
+    "# 데이터:9\n",
+    "# 데이터:5\n",
+    "# 데이터:3\n",
+    "# 데이터:4\n",
+    "# 클라이언트소켓 실행 예\n",
+    "\n",
+    "# c:\\projects\\pylib>python socket_client.py\n",
+    "# 1-9 사이의 숫자를 입력하세요(0은 게임포기):1\n",
+    "# 서버응답:너무 낮아요\n",
+    "# 1-9 사이의 숫자를 입력하세요(0은 게임포기):9\n",
+    "# 서버응답:너무 높아요\n",
+    "# 1-9 사이의 숫자를 입력하세요(0은 게임포기):5\n",
+    "# 서버응답:너무 높아요\n",
+    "# 1-9 사이의 숫자를 입력하세요(0은 게임포기):3\n",
+    "# 서버응답:너무 낮아요\n",
+    "# 1-9 사이의 숫자를 입력하세요(0은 게임포기):4\n",
+    "# 서버응답:정답\n",
+    "# 참고\n",
+    "# socket - 저수준 네트워킹 인터페이스: https://docs.python.org/ko/3/library/socket.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting socket_client.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile socket_client.py \n",
+    "# socket_client.py\n",
+    "import socket\n",
+    "\n",
+    "HOST = 'localhost'\n",
+    "PORT = 50007\n",
+    "\n",
+    "with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:\n",
+    "    s.connect((HOST, PORT))\n",
+    "\n",
+    "    while True:\n",
+    "        n = input(\"1-9 사이의 숫자를 입력하세요(0은 게임포기):\")\n",
+    "        if not n.strip():\n",
+    "            print(\"입력값이 잘못되었습니다.\")\n",
+    "            continue\n",
+    "        s.sendall(n.encode('utf-8'))\n",
+    "        data = s.recv(1024).decode('utf-8')\n",
+    "        print(f'서버응답:{data}')\n",
+    "        if data == \"정답\" or data == \"종료\":\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -240,9 +496,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
