20230412 Home Review Python

--- a/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/15. 마크업 언어 다루기.ipynb
+++ b/Programming/Python/Python 중급/(박응용) 점프투파이썬_라이브러리 예제 편/15. 마크업 언어 다루기.ipynb
@@ -208,7 +208,8 @@
     "#     parser.feed(f.read())\n",
     "\n",
     "# html.parser의 HTMLParser 클래스를 상속한 MyHTMLParser 클래스를 생성했다. \n",
-    "# handle_starttag() 메서드는 <html> 또는 <head> 와 같은 시작 태그가 열릴 때 호출한다. 이때 해당 태그명은 tag라는 매개변수로 전달한다. \n",
+    "# handle_starttag() 메서드는 <html> 또는 <head> 와 같은 시작 태그가 열릴 때 호출한다. \n",
+    "# 이때 해당 태그명은 tag라는 매개변수로 전달한다. \n",
     "# 그리고 태그의 속성(attribute)도 매개변수 attrs로 전달한다. \n",
     "# handle_endtag() 메서드는 해당 태그가 닫힐 때 호출하고 마찬가지로 태그명은 매개변수 tag로 전달한다. \n",
     "# 그리고 handle_data() 메서드는 해당 태그 사이의 문자열을 매개변수 data로 전달한다.\n",
@@ -229,11 +230,403 @@
     "# 참고\n",
     "# html.parser - 간단한 HTML과 XHTML 구문 분석기: https://docs.python.org/ko/3/library/html.parser.html"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "practicality\n",
+      "never\n",
+      "Now\n",
+      "right\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [파일명: html_parser_sample.py]\n",
+    "\n",
+    "# from html.parser import HTMLParser\n",
+    "\n",
+    "\n",
+    "# class MyHTMLParser(HTMLParser):\n",
+    "#     def __init__(self):\n",
+    "#         HTMLParser.__init__(self)\n",
+    "#         self.is_strong = False\n",
+    "\n",
+    "#     def handle_starttag(self, tag, attrs):\n",
+    "#         if tag == 'strong':  # <strong> 태그 시작\n",
+    "#             self.is_strong = True\n",
+    "\n",
+    "#     def handle_endtag(self, tag):\n",
+    "#         if tag == 'strong':  # </strong> 태그 닫힘\n",
+    "#             self.is_strong = False\n",
+    "\n",
+    "#     def handle_data(self, data):\n",
+    "#         if self.is_strong:  # <strong>~</strong> 구간인 경우\n",
+    "#             print(data)     # 데이터를 출력\n",
+    "\n",
+    "\n",
+    "# with open('python_zen.html') as f:\n",
+    "#     parser = MyHTMLParser()\n",
+    "#     parser.feed(f.read())\n",
+    "\n",
+    "from html.parser import HTMLParser\n",
+    "\n",
+    "class MyHTMLParser(HTMLParser):\n",
+    "    def __init__(self):\n",
+    "        HTMLParser.__init__(self)\n",
+    "        self.is_strong = False\n",
+    "        \n",
+    "    def handle_starttag(self, tag: str, attrs) -> None:\n",
+    "        if tag == 'strong':\n",
+    "            self.is_strong = True\n",
+    "\n",
+    "    def handle_endtag(self, tag):\n",
+    "        if tag == 'strong':\n",
+    "            self.is_strong = False\n",
+    "    \n",
+    "    def handle_data(self, data: str) -> None:\n",
+    "        if self.is_strong:\n",
+    "            print(data)\n",
+    "\n",
+    "with open('python_zen.html') as f:\n",
+    "    parser = MyHTMLParser()\n",
+    "    parser.feed(f.read())\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing python_zen.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile python_zen.html\n",
+    "<html>\n",
+    "<head>\n",
+    "<title>Python Zen</title>\n",
+    "</head>\n",
+    "<body>\n",
+    "<h2>The Zen of Python, by Tim Peters</h2>\n",
+    "<ul>\n",
+    "  <li>Beautiful is better than ugly.</li>\n",
+    "  <li>Explicit is better than implicit.</li>\n",
+    "  <li>Simple is better than complex.</li>\n",
+    "  <li>Complex is better than complicated.</li>\n",
+    "  <li>Flat is better than nested.</li>\n",
+    "  <li>Sparse is better than dense.</li>\n",
+    "  <li>Readability counts.</li>\n",
+    "  <li>Special cases aren't special enough to break the rules.</li>\n",
+    "  <li>Although <strong>practicality</strong> beats purity.</li>\n",
+    "  <li>Errors should <strong>never</strong> pass silently.</li>\n",
+    "  <li>Unless explicitly silenced.</li>\n",
+    "  <li>In the face of ambiguity, refuse the temptation to guess.</li>\n",
+    "  <li>There should be one-- and preferably only one --obvious way to do it.</li>\n",
+    "  <li>Although that way may not be obvious at first unless you're Dutch.</li>\n",
+    "  <li><strong>Now</strong> is better than never.</li>\n",
+    "  <li>Although never is often better than <strong>right</strong> now.</li>\n",
+    "  <li>If the implementation is hard to explain, it's a bad idea.</li>\n",
+    "  <li>If the implementation is easy to explain, it may be a good idea.</li>\n",
+    "  <li>Namespaces are one honking great idea -- let's do more of those!</li>\n",
+    "</ul>\n",
+    "</body>\n",
+    "</html>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 084 XML 문서를 만들려면? ― xml.etree.ElementTree\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 084 XML 문서를 만들려면? ― xml.etree.ElementTree\n",
+    "\n",
+    "# xml.etree.ElementTree는 XML 문서를 만들 때 사용하는 모듈이다.\n",
+    "\n",
+    "# 문제\n",
+    "# xml.etree.ElementTree 모듈을 사용하여 다음과 같은 note.xml 파일을 만들려면 어떻게 해야 할까?\n",
+    "\n",
+    "# [파일명: note.xml]\n",
+    "\n",
+    "# <note date=\"20120104\">\n",
+    "#     <to>Tove</to>\n",
+    "#     <from>Jani</from>\n",
+    "#     <heading>Reminder</heading>\n",
+    "#     <body>Don't forget me this weekend!</body>\n",
+    "# </note>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 풀이\n",
+    "# 먼저 다음과 같은 프로그램을 작성해 보자.\n",
+    "\n",
+    "# [파일명: xml_etree_elementtree_write_sample.py]\n",
+    "\n",
+    "# from xml.etree.ElementTree import Element, dump\n",
+    "\n",
+    "# note = Element(\"note\")\n",
+    "# to = Element(\"to\")\n",
+    "# to.text = \"Tove\"\n",
+    "\n",
+    "# note.append(to)\n",
+    "# dump(note)  # note 엘리먼트를 XML로 출력\n",
+    "# 이 프로그램의 실행 결과는 다음과 같다.\n",
+    "\n",
+    "# c:\\projects\\pylib>python xml_etree_elementtree_write_sample.py\n",
+    "# <note><to>Tove</to></note>\n",
+    "\n",
+    "# 엘리먼트(Element)를 이용하면 태그를 만들 수 있고, 만들어진 태그에 텍스트 값을 추가할 수 있음을 알 수 있다.\n",
+    "\n",
+    "# dump(note)는 note 엘리먼트를 XML로 출력한다.\n",
+    "\n",
+    "# SubElement\n",
+    "# 서브엘리먼트(SubElement)를 이용하면 더 편리하게 태그를 추가할 수 있다.\n",
+    "\n",
+    "# [파일명: xml_etree_elementtree_write_sample.py]\n",
+    "\n",
+    "# from xml.etree.ElementTree import Element, SubElement, dump\n",
+    "\n",
+    "# note = Element(\"note\")\n",
+    "# to = Element(\"to\")\n",
+    "# to.text = \"Tove\"\n",
+    "\n",
+    "# note.append(to)\n",
+    "# SubElement(note, \"from\").text = \"Jani\"  # 이 부분 추가!\n",
+    "\n",
+    "# dump(note)\n",
+    "# SubElement()를 사용하여 <note> 엘리먼트 아래에 <from> 엘리먼트를 추가하고 이 안에 콘텐츠 텍스트 \"Jani\"를 지정했다.\n",
+    "\n",
+    "# c:\\projects\\pylib>python xml_etree_elementtree_write_sample.py\n",
+    "# <note><to>Tove</to><from>Jani</from></note>\n",
+    "# 태그와 태그의 텍스트 값을 한 번에 서브엘리먼트로 추가할 수 있다.\n",
+    "\n",
+    "# 속성 추가하기\n",
+    "# 이번에는 note 태그에 속성(attribute)을 추가해 보자.\n",
+    "\n",
+    "# [파일명: xml_etree_elementtree_write_sample.py]\n",
+    "\n",
+    "# from xml.etree.ElementTree import Element, SubElement, dump\n",
+    "\n",
+    "# note = Element(\"note\")\n",
+    "# to = Element(\"to\")\n",
+    "# to.text = \"Tove\"\n",
+    "\n",
+    "# note.append(to)\n",
+    "# SubElement(note, \"from\").text = \"Jani\"\n",
+    "# note.attrib[\"date\"] = \"20120104\"  # 이 부분 추가!\n",
+    "\n",
+    "# dump(note)\n",
+    "# note.attrib[\"date\"] = \"20120104\"와 같은 방식으로 속성값(attribute value)을 추가할 수 있다. \n",
+    "# 또는 다음과 같이 엘리먼트 생성 시 직접 속성값을 추가하는 방법을 사용해도 된다.\n",
+    "\n",
+    "# note = Element(\"note\", date=\"20120104\")\n",
+    "# 프로그램 실행 결과는 다음과 같다.\n",
+    "\n",
+    "# c:\\projects\\pylib>python xml_etree_elementtree_write_sample.py\n",
+    "# <note date=\"20120104\"><to>Tove</to><from>Jani</from></note>\n",
+    "\n",
+    "# note 엘리먼트에 date=\"20120104\" 속성과 값이 추가된 것을 확인할 수 있다.\n",
+    "\n",
+    "# 문제에서 요구하는 모든 엘리먼트와 속성을 추가한 코드는 다음과 같다.\n",
+    "\n",
+    "# [파일명: xml_etree_elementtree_write_sample.py]\n",
+    "\n",
+    "# from xml.etree.ElementTree import Element, SubElement, dump\n",
+    "\n",
+    "# note = Element(\"note\")\n",
+    "# note.attrib[\"date\"] = \"20120104\"\n",
+    "\n",
+    "# to = Element(\"to\")\n",
+    "# to.text = \"Tove\"\n",
+    "# note.append(to)\n",
+    "\n",
+    "# SubElement(note, \"from\").text = \"Jani\"\n",
+    "# SubElement(note, \"heading\").text = \"Reminder\"\n",
+    "# SubElement(note, \"body\").text = \"Don't forget me this weekend!\"\n",
+    "# dump(note)\n",
+    "# 프로그램의 실행 결과는 문제의 note.xml과 같은 내용이다.\n",
+    "\n",
+    "# c:\\projects\\pylib>python xml_etree_elementtree_write_sample.py\n",
+    "# <note date=\"20120104\"><to>Tove</to><from>Jani</from><heading>Reminder</heading><body>Don't forget me this weekend!</body></note>\n",
+    "\n",
+    "# XML 정렬하기\n",
+    "# 하지만, 이 XML 출력 결과는 줄 바꿈 없이 한 줄로 이어져 보기가 어렵다. 정렬한 형태의 XML을 보려면 다음과 같이 xml.dom.minidom을 함께 사용하는 것이 가장 편리하다.\n",
+    "\n",
+    "# 완성된 문제 풀이는 다음과 같다.\n",
+    "\n",
+    "# [파일명: xml_etree_elementtree_write_sample.py]\n",
+    "\n",
+    "# from xml.etree.ElementTree import Element, SubElement\n",
+    "\n",
+    "# note = Element(\"note\")\n",
+    "# note.attrib[\"date\"] = \"20120104\"\n",
+    "\n",
+    "# to = Element(\"to\")\n",
+    "# to.text = \"Tove\"\n",
+    "# note.append(to)\n",
+    "\n",
+    "# SubElement(note, \"from\").text = \"Jani\"\n",
+    "# SubElement(note, \"heading\").text = \"Reminder\"\n",
+    "# SubElement(note, \"body\").text = \"Don't forget me this weekend!\"\n",
+    "\n",
+    "# # XML 을 보기좋게 만들어 저장\n",
+    "# from xml.dom import minidom\n",
+    "# import xml.etree.ElementTree as ET\n",
+    "# xmlstr = minidom.parseString(ET.tostring(note)).toprettyxml(indent=\"  \")\n",
+    "# print(xmlstr)\n",
+    "\n",
+    "# # XML을 파일로 저장\n",
+    "# with open('note.xml', 'w') as f:\n",
+    "#     f.write(xmlstr)\n",
+    "\n",
+    "# minidom 모듈로 note 엘리먼트에 해당하는 XML 문자열을 파싱(parseString())한 후에 toprettyxml() 함수로 공백 2개(\" \")만큼 들여 쓴 xmlstr을 생성하고 출력했다. 그러면 다음과 같이 정렬된 형태의 XML을 확인할 수 있다.\n",
+    "\n",
+    "# <?xml version=\"1.0\" ?>\n",
+    "# <note date=\"20120104\">\n",
+    "#   <to>Tove</to>\n",
+    "#   <from>Jani</from>\n",
+    "#   <heading>Reminder</heading>\n",
+    "#   <body>Don't forget me this weekend!</body>\n",
+    "# </note>\n",
+    "# toprettyxml() 함수를 사용하면 XML 문서임을 뜻하는 <?xml version=\"1.0\" ?> 문장이 제일 윗줄에 추가된다.\n",
+    "\n",
+    "# 그리고 마지막으로 보기 좋게 정렬한 XML을 note.xml 파일로 저장하였다.\n",
+    "\n",
+    "# 참고\n",
+    "# xml.etree.ElementTree - ElementTree XML API: https://docs.python.org/ko/3/library/xml.etree.elementtree.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 085 XML에서 엘리먼트와 콘텐츠를 읽으려면? ― xml.etree.ElementTree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 085 XML에서 엘리먼트와 콘텐츠를 읽으려면? ― xml.etree.ElementTree\n",
+    "# xml.etree.ElementTree는 XML 문서를 파싱(parsing)하고 검색할 때 사용하는 모듈이다.\n",
+    "\n",
+    "# xml.etree.ElementTree 모듈은 XML 문서를 만들 때도 사용한다.\n",
+    "\n",
+    "# 문제\n",
+    "# 앞 절에서는 다음과 같은 note.xml 파일을 만들었다. 이번에는 이 파일에서 엘리먼트와 콘텐츠를 읽고자 한다.\n",
+    "\n",
+    "# 참고: 084 XML 문서를 만들려면? - xml.etree.ElementTree\n",
+    "\n",
+    "# [파일명: note.xml]\n",
+    "\n",
+    "# <?xml version=\"1.0\" ?>\n",
+    "# <note date=\"20120104\">\n",
+    "#   <to>Tove</to>\n",
+    "#   <from>Jani</from>\n",
+    "#   <heading>Reminder</heading>\n",
+    "#   <body>Don't forget me this weekend!</body>\n",
+    "# </note>\n",
+    "# 이 파일을 파싱하여 <note> 엘리먼트의 date 속성값과 <to>, <from>, <heading>, <body>에 해당하는 텍스트 값을 출력하는 프로그램은 어떻게 만들어야 할까?\n",
+    "\n",
+    "# 풀이\n",
+    "# xml.etree.ElementTree의 parse() 함수를 사용하면 다음과 같이 XML 파일을 간단하게 파싱할 수 있다.\n",
+    "\n",
+    "# from xml.etree.ElementTree import parse\n",
+    "\n",
+    "# tree = parse(\"note.xml\")\n",
+    "# note = tree.getroot()\n",
+    "# <note> 엘리먼트는 루트 엘리먼트이므로 note = tree.getroot()로 구할 수 있다.\n",
+    "\n",
+    "# 속성값 읽기\n",
+    "# 속성값은 다음과 같이 읽을 수 있다.\n",
+    "\n",
+    "# print(note.get(\"date\", \"19991231\"))\n",
+    "# print(note.keys())\n",
+    "# print(note.items())\n",
+    "# get() 함수는 해당 엘리먼트의 속성값을 읽는 함수이다. 두 번째 입력 인수로 기본값을 설정하면 첫 번째 인수에 해당하는 속성에 값이 없을 때는 기본으로 설정한 값을 반환한다.\n",
+    "\n",
+    "# keys() 함수는 해당 엘리먼트의 모든 속성 키값을 리스트로 반환하고 items() 함수는 key, value 쌍을 반환한다.\n",
+    "\n",
+    "# 이 프로그램을 실행한 결과는 다음과 같다.\n",
+    "\n",
+    "# 20120104\n",
+    "# ['date']\n",
+    "# [('date', '20120104')]\n",
+    "# 하위 엘리먼트 접근하기\n",
+    "# note 엘리먼트의 하위 엘리먼트에 접근하는 방법은 다음과 같다.\n",
+    "\n",
+    "# from_tag = note.find(\"from\")\n",
+    "# from_tags = note.findall(\"from\")\n",
+    "# from_text = note.findtext(\"from\")\n",
+    "# note.find(\"from\")은 <note> 엘리먼트 하위에 <from>과 일치하는 첫 번째 엘리먼트를 찾아서 반환하고, \n",
+    "# 없으면 None을 반환한다. note.findall(\"from\")은 <note> 엘리먼트 하위에 <from>과 일치하는 모든 엘리먼트를 리스트로 반환한다. note.findtext(\"from\")은 <note> 엘리먼트 하위에 <from>과 일치하는 첫 번째 엘리먼트의 텍스트 값을 반환한다.\n",
+    "\n",
+    "# 특정 태그의 모든 하위 엘리먼트를 순서대로 처리할 때는 다음처럼 iter() 함수를 사용한다.\n",
+    "\n",
+    "# childs = note.iter()\n",
+    "# iter() 함수는 첫 번째 인수로 다음과 같이 엘리먼트 이름을 전달할 수도 있다.\n",
+    "\n",
+    "# from_childs = note.iter(\"from\")\n",
+    "# 이렇게 지정하면 <note> 엘리먼트의 하위 엘리먼트 중 <from> 엘리먼트만 차례대로 반환한다.\n",
+    "\n",
+    "# 문제 풀이를 위한 최종 코드는 다음과 같다.\n",
+    "\n",
+    "# [파일명: xml_etree_elementtree_read_sample.py]\n",
+    "\n",
+    "# from xml.etree.ElementTree import parse\n",
+    "\n",
+    "# tree = parse(\"note.xml\")\n",
+    "# note = tree.getroot()\n",
+    "\n",
+    "# print(note.get(\"date\"))\n",
+    "# for parent in tree.iter():\n",
+    "#     for child in parent:\n",
+    "#         print(child.text)\n",
+    "# date 속성은 note.get(\"date\")로 출력하고 나머지 엘리먼트의 값은 tree.iter()로 루트 엘리먼트의 하위 엘리먼트를 차례대로 조회하며 출력했다. 엘리먼트의 텍스트 값은 child.text처럼 엘리먼트.text로 얻을 수 있다.\n",
+    "\n",
+    "# 프로그램을 실행한 결과는 다음과 같다.\n",
+    "\n",
+    "# c:\\projects\\pylib>python xml_etree_elementtree_read_sample.py\n",
+    "# 20120104\n",
+    "# Tove\n",
+    "# Jani\n",
+    "# Reminder\n",
+    "# Don't forget me this weekend!\n",
+    "# 참고\n",
+    "# xml.etree.ElementTree - ElementTree XML API: https://docs.python.org/ko/3/library/xml.etree.elementtree.html"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -247,9 +640,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
