20230428 Home Review javascript

--- a/OS(Operating System)/(뉴렉처) 리눅스 강의/리눅스 강좌.md
+++ b/OS(Operating System)/(뉴렉처) 리눅스 강의/리눅스 강좌.md
@@ -343,6 +343,27 @@ $ apt-cache pkgnames | grep jdk
 $ sudo apt-get inatall openjdk-11-jdk
 
 
+## (39강) PPA를 이용한 JDK 설치하기
+### PPA(Personal Package Archive)를 이용한 소프트웨어 설치
+- openjdk8 를 설치하고 싶은데 apt-cache search pkgnames 했는데 저장소에 없음.
+- 개인화된 패키지 저장소(PPA)
+- add-apt-repository ppa: 를 이용하여 source.list에 개인저장소를 추가
+- apt-get update하면 목록을 추가할 수 있음
+### 저장소
+- Canonical 저장소(Ubunto를 운영) - Launchpad - launchpadblo(모든 사람들을 위한 개인화된 저장소)
+- 캐노니칼이 제공하지 않는 패키지를 Launchpad(PPA)를 이용해서 이전 버전의 패키지를 설치할 수 있음
+
+```linux
+$ sudo apt-cache pkgnames | grep jdk
+$ sudo add-apt-repository ppa:openjdk-r/ppa     # sources.list 추가
+$ sudo apt-get update                           # 사용 가능한 pkg 갱신 
+$ sudo apt-cache pkgnames | grep jdk
+```
+### 여러개의 jdk 버전을 선택해서 사용하는 방법
+```linux
+$ update-java-alternatives -l                   # 설치된 java 목록을 보여줌
+$ update-java-alternatives -s [원하는 java명]   # -l 옵션을 주었을 때 목록 확인가능
+```
 
 
 
