20230510 Office Review Spring Boot

--- a/Programming/SpringBoot/[박응용] 점프투스프링부트.md
+++ b/Programming/SpringBoot/[박응용] 점프투스프링부트.md
@@ -400,3 +400,124 @@ QuestionController의 list 메서드에서 조회한 질문 목록 데이터를 
 ```
 바로 앞의 for 문에서 얻은 question 객체의 제목을 <td> 엘리먼트의 텍스트로 출력한다.
 
+### 자주 사용하는 타임리프의 속성
+타임리프의 자주 사용하는 속성에는 다음 3가지 유형이 있다. 이 3가지 유형만 알아도 여러 기능을 충분히 만들 수 있다.
+
+1. 분기문 속성
+
+분기문 속성은 다음과 같이 사용한다.
+```html
+th:if="${question != null}"
+```
+위의 경우 question 객체가 null 이 아닌 경우에 해당 엘리먼트가 표시된다.
+
+2. 반복문 속성
+
+반복문은 반복횟수만큼 해당 엘리먼트를 반복하여 표시한다. 반복문 속성은 자바의 for each 문과 유사하다.
+```html
+th:each="question : ${questionList}"
+```
+반복문은 다음과 같이 사용할 수도 있다.
+```html
+th:each="question, loop : ${questionList}"
+```
+추가한 loop 객체를 이용하여 루프 내에서 다음과 같은 속성을 사용할수 있다.
+
+loop.index - 반복 순서, 0부터 1씩 증가
+loop.count - 반복 순서, 1부터 1씩 증가
+loop.size - 반복 객체의 요소 갯수 (예: questionList의 요소 갯수)
+loop.first - 루프의 첫번째 순서인 경우 true
+loop.last - 루프의 마지막 순서인 경우 true
+loop.odd - 루프의 홀수번째 순서인 경우 true
+loop.even - 루프의 짝수번째 순서인 경우 true
+loop.current - 현재 대입된 객체 (예: 위의 경우 question과 동일)
+
+3. 텍스트 속성
+
+th:text=값 속성은 해당 엘리먼트의 텍스트로 "값"을 출력한다.
+```html
+th:text="${question.subject}"
+```
+텍스트는 th:text 속성 대신에 다음처럼 대괄호를 사용하여 값을 직접 출력할수 있다.
+```html
+<tr th:each="question : ${questionList}">
+    <td>[[${question.subject}]]</td>
+    <td>[[${question.createDate}]]</td>
+</tr>
+```
+이 책에서는 새로운 타임리프 문법이 나올 때마다 자세히 설명할 것이므로 지금 당장 모든 타임리프의 속성에 대해 알아 둘 필요는 없다.
+
+## 2-08 ROOT URL
+다음과 같이 MainController를 수정하자.
+```java
+package com.mysite.sbb;
+
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ResponseBody;
+
+@Controller
+public class MainController {
+
+    @GetMapping("/sbb")
+    @ResponseBody
+    public String index() {
+        return "안녕하세요 sbb에 오신것을 환영합니다.";
+    }
+
+    @GetMapping("/")
+    public String root() {
+        return "redirect:/question/list";
+    }
+}
+```
+
+root 메서드를 추가하고 / URL을 매핑했다. 리턴 문자열 redirect:/question/list는 /question/list URL로 페이지를 리다이렉트 하라는 명령어이다. 스프링부트는 리다이렉트 또는 포워딩을 다음과 같이 할 수 있다.
+- redirect:<URL> - URL로 리다이렉트 (리다이렉트는 완전히 새로운 URL로 요청이 된다.)
+- forward:<URL> - URL로 포워드 (포워드는 기존 요청 값들이 유지된 상태로 URL이 전환된다.)
+
+
+## 2-09 서비스
+우리는 QuestionController에서 QuestionRepository를 직접 사용하여 질문 목록 데이터를 조회했다. 하지만 대부분의 규모있는 스프링부트 프로젝트는 컨트롤러에서 리포지터리를 직접 호출하지 않고 중간에 서비스(Service)를 두어 데이터를 처리한다. 서비스는 스프링에서 데이터 처리를 위해 작성하는 클래스이다.
+
+### 서비스가 필요한 이유
+#### 모듈화
+예를들어 어떤 컨트롤러가 여러개의 리포지터리를 사용하여 데이터를 조회한후 가공하여 리턴한다고 가정해 보자. 이러한 기능을 서비스로 만들어 두면 컨트롤러에서는 해당 서비스를 호출하여 사용하면 된다. 하지만 서비스로 만들지 않고 컨트롤러에서 구현하려 한다면 해당 기능을 필요로 하는 모든 컨트롤러가 동일한 기능을 중복으로 구현해야 한다. 이러한 이유로 서비스는 모듈화를 위해서 필요하다.
+
+#### 보안
+컨트롤러는 리포지터리 없이 서비스를 통해서만 데이터베이스에 접근하도록 구현하는 것이 보안상 안전하다. 이렇게 하면 어떤 해커가 해킹을 통해 컨트롤러를 제어할 수 있게 되더라도 리포지터리에 직접 접근할 수는 없게 된다.
+
+
+### 엔티티 객체와 DTO 객체의 변환
+우리가 작성한 Question, Answer 클래스는 엔티티(Entity) 클래스이다. 엔티티 클래스는 데이터베이스와 직접 맞닿아 있는 클래스이기 때문에 컨트롤러나 타임리프 같은 템플릿 엔진에 전달하여 사용하는 것은 좋지 않다. 컨트롤러나 타임리프에서 사용하는 데이터 객체는 속성을 변경하여 비즈니스적인 요구를 처리해야 하는 경우가 많은데 엔티티를 직접 사용하여 속성을 변경한다면 테이블 컬럼이 변경되어 엉망이 될수도 있기 때문이다.
+
+이러한 이유로 Question, Answer 같은 엔티티 클래스는 컨트롤러에서 사용할수 없게끔 설계하는 것이 좋다. 그러기 위해서는 Question, Answer 대신 사용할 DTO(Data Transfer Object) 클래스가 필요하다. 그리고 Question, Answer 등의 엔티티 객체를 DTO 객체로 변환하는 작업도 필요하다. 그러면 엔티티 객체를 DTO 객체로 변환하는 일은 어디서 처리해야 할까? 그렇다. 바로 서비스이다. 서비스는 컨트롤러와 리포지터리의 중간자적인 입장에서 엔티티 객체와 DTO 객체를 서로 변환하여 양방향에 전달하는 역할을 한다.
+
+### QuestionService
+```java
+@RequiredArgsConstructor
+@Service
+public class QuestionService {
+
+    private final QuestionRepository questionRepository;
+
+    public List<Question> getList() {
+        return this.questionRepository.findAll();
+    }
+}
+```
+
+### QuestionController
+```java
+public class QuestionController {
+
+    private final QuestionService questionService;
+
+    @GetMapping("/question/list")
+    public String list(Model model) {
+        List<Question> questionList = this.questionService.getList();
+        model.addAttribute("questionList", questionList);
+        return "question_list";
+    }
+}
+```
