--- a/Programming/SpringBoot/[박응용] 점프투스프링부트.md
+++ b/Programming/SpringBoot/[박응용] 점프투스프링부트.md
@@ -521,3 +521,104 @@ public class QuestionController {
     }
 }
 ```
+
+## 2-10 질문 상세
+
+### 질문 상세 링크 추가하기
+```html
+    <tbody>
+        <tr th:each="question, index : ${questionList}">
+            <td>
+                <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+            </td>
+            <td th:text="${question.createDate}"></td>
+        </tr>
+    </tbody>
+```
+
+### 질문 상세 컨트롤러 만들기
+
+```java ~ /QuestionController.java
+@GetMapping(value = "/question/detail/{id}")
+    public String detail(Model model, @PathVariable("id") Integer id) {
+        return "question_detail";
+    }
+```    
+
+### 서비스
+```java ~ QuestionService.java
+public Question getQuestion(Integer id) {  
+        Optional<Question> question = this.questionRepository.findById(id);
+        if (question.isPresent()) {
+            return question.get();
+        } else {
+            throw new DataNotFoundException("question not found");
+        }
+    }
+```
+
+#### DataNotFoundException
+```java ~ DataNotFoundException.java
+@ResponseStatus(value = HttpStatus.NOT_FOUND, reason = "entity not found")
+public class DataNotFoundException extends RuntimeException {
+    private static final long serialVersionUID = 1L;
+    public DataNotFoundException(String message) {
+        super(message);
+    }
+}
+``` 
+
+```java ~ QuestionController.java
+@GetMapping(value = "/question/detail/{id}")
+    public String detail(Model model, @PathVariable("id") Integer id) {
+        Question question = this.questionService.getQuestion(id);
+        model.addAttribute("question", question);
+        return "question_detail";
+    }
+```
+
+### 템플릿
+```html ~ question_detail.html
+<h1 th:text="${question.subject}"></h1>
+<div th:text="${question.content}"></div>
+```
+
+### URL 프리픽스(prefix)
+```java ~ QuestionController.java
+@RequestMapping("/question")
+@RequiredArgsConstructor
+@Controller
+public class QuestionController {
+
+    private final QuestionService questionService;
+
+    @GetMapping("/list")
+    public String list(Model model) {
+        (... 생략 ...)
+    }
+
+    @GetMapping(value = "/detail/{id}")
+    public String detail(Model model, @PathVariable("id") Integer id) {
+        (... 생략 ...)
+    }
+}
+```
+
+## 2-11 답변 등록
+
+### 답변 등록 버튼 만들기
+
+```html ~ templates/question_detail.html
+<h1 th:text="${question.subject}"></h1>
+<div th:text="${question.content}"></div>
+
+<form th:action="@{|/answer/create/${question.id}|}" method="post">
+    <textarea name="content" id="content" rows="15"></textarea>
+    <input type="submit" value="답변등록">
+</form>
+```
+
+
+
+
+
